testing/startup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: startup
    namespace: default
  name: startup-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: startup
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: startup
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: uat
            - name: JAVA_OPTS
              value: '-Duser.timezone=Asia/Phnom_Penh'
          image: 'localhost:8087/startup:1.0.0-uat'
          imagePullPolicy: Always
          name: startup
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            privileged: true
            runAsUser: 0
      dnsConfig:
        nameservers:
          - localhost
        searches:
          - startup.local
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: startup
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
