testing/startup-service.yml
apiVersion: v1
kind: Service
metadata:
  name: startup-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: startup
  type: ClusterIP
