testing/startup-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.org/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: scheduler-ingress
  namespace: default
spec:
  rules:
    - host: startup.com.kh
      http:
        paths:
          - backend:
              service:
                name: scheduler-service
                port:
                  number: 8080
            path: /startup(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - startup.com.kh
